# guac

./: .env.example  .gitignore  Cargo.toml  PROJECT_MATURITY_ASSESSMENT.md  README.md  guac.toml.example  kaptaind.toml
company/: brand-aesthetic.md  brand.md  enterprise-plan.md  launch-kit.md  marketing.md  monetization.md  rd.md
src/: assembler.rs  character.rs  classifier.rs  cli.rs  compression.rs  config.rs  fs_memory.rs  groq_client.rs  kg.rs  main.rs  memory.rs  router.rs  validation.rs
tests/: cli.rs
website/: about.html  blog.html  docs.html  index.html  press.html  styles.css
website/site-kit/: README.md  components.html  tokens.css
